--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.10",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.4",
     "tailwindcss": "^4.1.17"
