--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.10",
+    "@astrojs/rss": "^4.0.13",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.4",
     "tailwindcss": "^4.1.17"
